# pydantic-workshop

./: .gitignore  Makefile  README.md  requirements.txt
books/: 1.json
lib/: Makefile  pyproject.toml
lib/pybrary/cli/: __init__.py
lib/pybrary/client/: __init__.py  settings.py
lib/pybrary/models/: __init__.py
lib/pybrary/server/: __init__.py  settings.py  utils.py
workshop/: 01.md  02.md  03.md  04.md  05.md  06.md  07.md  08.md  09.md  10.md
