[project]
name = "pybrary"
version = "0.1.0"
description = ""
authors = [
    {name = "Ben Nuttall", email = "ben@bennuttall.com"}
]

dependencies = [
    "pydantic (>=2)",
    "requests (>=2.32.5)",
    "pydantic-settings (>=2.10.1)",
    "typer (>=0.17.4)",
    "pyyaml (>=6.0.2)",
    "uvicorn (>=0.35.0)",
    "fastapi[normal] (>=0.116.2)",
]

[project.scripts]
pybrary = 'pybrary.cli:app'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.isort]
profile = "black"
lines_after_imports = 2